<resources>
    <string name="app_name">Dodge Karo Na</string>
    <string name="start_new_game">START</string>
    <string name="about">ABOUT</string>
    <string name="controls">CONTROLS</string>
    <string name="controls_title">Game Controls</string>
    <string name="controls_text">Use the virtual joystick in the corner of the screen to control player movement. Drag the joystick in any direction to move the player. Release to stop moving. Tap anywhere outside the joystick to pause the game.</string>
    <string name="about_dodgekarona_title">About Dodge Karo Na</string>
    <string name="about_game_text">The world is infested with the deadly pathogens. You can get infected even if a person around you is infected. The Hakuna Matata Organization (HMO) has recommended keeping a minimum social distance of %1$s in public places. And use of face coverings is mandatory in all public places. Your objective is to help Hagger dodge infected people to make his way home safely.</string>
    <string name="get_ready">Get Ready</string>
    <string name="tap_screen_to_start">Tap Screen to Start</string>
    <string name="game_paused">Game Paused</string>
    <string name="tap_screen_to_resume">Tap Screen to Resume</string>
    <string name="victory">VICTORY</string>
    <string name="survived_the_pandemic">Reached home safely.</string>
    <string name="game_over">Game Over</string>
    <string name="you_got_infected">You got infected!</string>
    <string name="too_close_to_infected_person">Went within %1$s of an infected person.</string>
    <string name="safe_social_distance_in_meter">2 m</string>
    <string name="safe_social_distance_in_feet">6 ft</string>
    <string name="stay_home">Stay home for 14 days.</string>
    <string name="tap_screen_to_restart">Tap Screen to Restart</string>
    <string name="copyright_string">© 2023 Ashish Kenjale</string>

    <!-- Joystick Settings -->
    <string name="joystick_control">JOYSTICK CONTROL</string>
    <string name="joystick_settings_title">Joystick Settings</string>
    <string name="joystick_size">Size</string>
    <string name="joystick_opacity">Opacity</string>
    <string name="joystick_position">Position</string>
    <string name="position_left">Left</string>
    <string name="position_center">Center</string>
    <string name="position_right">Right</string>
    <string name="joystick_preview">Preview</string>
    <string name="invert_axis">Invert Axis</string>
    <string name="invert_x_axis">Invert X (Left/Right)</string>
    <string name="invert_y_axis">Invert Y (Up/Down)</string>
    <string name="save_settings">SAVE</string>
    <string name="reset_defaults">RESET TO DEFAULTS</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_reset">Settings reset to defaults</string>
</resources>
