<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joystick_settings_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Joystick Size -->
        <TextView
            android:id="@+id/sizeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joystick_size"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/sizeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="50"
            android:max="150"
            android:progress="100"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sizeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/sizeValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="100%"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/sizeSeekBar"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Joystick Opacity -->
        <TextView
            android:id="@+id/opacityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joystick_opacity"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@+id/sizeValueText"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/opacitySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="100"
            android:progress="50"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/opacityLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/opacityValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="50%"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/opacitySeekBar"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Joystick Position -->
        <TextView
            android:id="@+id/positionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joystick_position"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@+id/opacityValueText"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/positionRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/positionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/positionLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_left"
                android:layout_marginEnd="@dimen/padding_large" />

            <RadioButton
                android:id="@+id/positionRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_right" />

        </RadioGroup>

        <!-- Invert Axis -->
        <TextView
            android:id="@+id/invertAxisLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invert_axis"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@+id/positionRadioGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/invertAxisLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/invertAxisLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <CheckBox
                android:id="@+id/invertXCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invert_x_axis"
                android:layout_marginEnd="@dimen/padding_large" />

            <CheckBox
                android:id="@+id/invertYCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invert_y_axis" />

        </LinearLayout>

        <!-- Preview Area -->
        <TextView
            android:id="@+id/previewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joystick_preview"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@+id/invertAxisLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.project.dodgekarona.JoystickPreviewView
            android:id="@+id/joystickPreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@+id/previewLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Save Button -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings"
            android:layout_marginTop="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@+id/joystickPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Reset Button -->
        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_defaults"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
